[project]
name = "evaluating-llm-systems"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alexandre Henrique", email = "alexandre.hsd@gmail.com"},
]
dependencies = [
    "langchain>=0.3.3",
    "langsmith>=0.1.135",
    "langchain-community>=0.3.2",
    "langchain-experimental>=0.3.2",
    "langgraph>=0.2.38",
    "ipykernel>=6.29.5",
    "langchain-openai>=0.2.2",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "ipywidgets>=8.1.5",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
